changed avatar profile pic and fixed dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,10 +20,10 @@
     --surface-color-dark-mode-hover: oklch(100% 0.00011 271.152 / 0.05);
     --highlight-color-dark-mode: oklch(100% 0.00011 271.152 / 0.2);
 
-    --stroke: var(--stroke-color-dark-mode);
-    --surface: var(--surface-color-dark-mode);
-    --surface-hover: var(--surface-color-dark-mode-hover);
-    --highlight: var(--highlight-color-dark-mode);
+    --stroke-ondark: var(--stroke-color-dark-mode);
+    --surface-ondark: var(--surface-color-dark-mode);
+    --surface-ondark-hover: var(--surface-color-dark-mode-hover);
+    --highlight-ondark: var(--highlight-color-dark-mode);
   }
 }
 
@@ -33,15 +33,19 @@
   --surface-color-dark-mode-hover: oklch(100% 0.00011 271.152 / 0.05);
   --highlight-color-dark-mode: oklch(100% 0.00011 271.152 / 0.2);
 
-  --stroke: var(--stroke-color-dark-mode);
-  --surface: var(--surface-color-dark-mode);
-  --surface-hover: var(--surface-color-dark-mode-hover);
-  --highlight: var(--highlight-color-dark-mode);
+  --stroke-ondark: var(--stroke-color-dark-mode);
+  --surface-ondark: var(--surface-color-dark-mode);
+  --surface-ondark-hover: var(--surface-color-dark-mode-hover);
+  --highlight-ondark: var(--highlight-color-dark-mode);
 }
 
 @theme inline {
   --color-stroke: var(--stroke);
+  --color-stroke-ondark: var(--stroke-ondark);
   --color-surface: var(--surface);
+  --color-surface-ondark: var(--surface-ondark);
   --color-surface-hover: var(--surface-hover);
+  --color-surface-ondark-hover: var(--surface-ondark-hover);
   --color-highlight: var(--highlight);
+  --color-highlight-ondark: var(--highlight-ondark);
 }
